feat: add https://www.iocoder.cn/Spring-Boot/Async-Job/  Async-Job

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>springMVC</module>
         <module>jdi-mybatis</module>
+        <module>jdi-async</module>
     </modules>
 
     <properties>
