--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>springMVC</module>
         <module>jdi-mybatis</module>
         <module>jdi-async</module>
+        <module>jdi-mybatis-plus</module>
     </modules>
 
     <properties>
